<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/inputIdTxt"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/inputIdEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/inputIdHint"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:maxLines="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/inputPwTxt"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/inputPwEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/inputPwHint"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:maxLines="1"/>

    <CheckBox
        android:id="@+id/autoLoginCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autoLoginCb"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/loginBtn"
        android:textSize="16sp"
        android:textStyle="bold"/>

</LinearLayout>